added all links

--- a/home.html
+++ b/home.html
@@ -50,21 +50,17 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-md">
             <div class="container" style="background-color: rgba(0, 51, 102, 0.9); border-radius: 8px; padding: 0.5rem 1rem;">
-                <!-- border-radius: 8px; padding: 0.5rem 1rem; -->
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon" style="color: #FFFFFF;"></span>
-                </button> -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a href="home.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Home</a></li>
-                        <li class="nav-item"><a href="aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
-                        <li class="nav-item"><a href="Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
-                        <li class="nav-item"><a href="Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
-                        <li class="nav-item"><a href="Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
-                        <li class="nav-item"><a href="Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
+                        <li class="nav-item"><a href="./home.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Home</a></li>
+                        <li class="nav-item"><a href="./templates/aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
+                        <li class="nav-item"><a href="./templates/Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
+                        <li class="nav-item"><a href="./templates/Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
+                        <li class="nav-item"><a href="./templates/Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
+                        <li class="nav-item"><a href="./templates/Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
                         <!-- <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li> -->
-                        <li class="nav-item"><a href="competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
-                        <li class="nav-item"><a href="Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
+                        <li class="nav-item"><a href="./templates/competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
+                        <li class="nav-item"><a href="./templates/Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
                         <!-- <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li> -->
                     </ul>
                 </div>
@@ -76,12 +72,12 @@
         <div class="row justify-content-left">
             <!-- Call-to-Action Buttons -->
             <div class="col-md-4 d-flex flex-column align-items-center gap-3">
-                <a href="VirtualLab_directories.html" 
+                <a href="./templates/VirtualLab_directories.html" 
                    class="btn btn-lg w-100 callaction" target="_blank">
                     Explore Labs
                 </a>
-                <a href="#join" 
-                   class="btn btn-lg w-100 callaction">
+                <a href="https://www.robotics-institute-germany.de/" 
+                   class="btn btn-lg w-100 callaction" target="_blank">
                     Join the Community
                 </a>
             </div>
@@ -93,7 +89,7 @@
         <div class="row g-4">
             <!-- Virtual Labs Box -->
             <div class="col-md-4">
-                <a href="ViBHomepage_new.html" target="_blank"
+                <a href="https://vib.ai.uni-bremen.de/page/labs/" target="_blank"
                    class="card text-white text-center h-100 text-decoration-none" 
                    style="background: linear-gradient(135deg, #5A3F8A, #6F52A6); border-radius: 15px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <div class="card-body">
@@ -115,7 +111,7 @@
             </div>
             <!-- Educational Resources Box -->
             <div class="col-md-4">
-                <a href="educational-resources.html" 
+                <a href="https://textbook.intel4coro.de/" target="_blank" 
                    class="card text-white text-center h-100 text-decoration-none" 
                    style="background: linear-gradient(135deg, #FF5733, #FF8C42); border-radius: 15px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <div class="card-body">
