--- a/old_templates/competition_old.html
+++ b/old_templates/competition_old.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual Labs Homepage</title>
+    <title>Competitions</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/boot.css">
     <style>
+        .competition-card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .competition-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
         .background {
             position: fixed;
             top: 0;
@@ -27,7 +34,7 @@
     <div class="background"></div>
 
     <!-- Header Section -->
-    <header class="bg-gradient text-center py-2" style="background: linear-gradient(to bottom, #003366, #f0f0f0);">
+    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden;">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
@@ -65,101 +72,77 @@
         </div>
     </nav>
 
+
     <header class="bg-transparent text-center py-4">
         <div class="container text-black py-4 rounded" style="background-color: white;">
-            <h1 class="display-5">Explore, Experiment, Innovate: Welcome to Virtual Labs</h1>
-            <p class="lead">Access state-of-the-art virtual environments, conduct reproducible experiments, and collaborate remotely</p>
-        <div class="d-flex justify-content-center gap-2">
-            <a href="VirtualLab_directories.html" class="btn btn-light" target="_blank">Enter Virtual Labs</a>
-            <button class="btn btn-light text-primary">Learn How It Works</button>
+            <h1 class="display-5">Robotics Competitions</h1>
+            <p class="lead">Explore the world of robotics competitions and find your next challenge!</p>
+            <div class="d-flex justify-content-center gap-2">
+                <button class="btn btn-light text-primary">Explore the Highlights</button>
+            </div>
         </div>
     </header>
 
     <section class="container my-5">
-        <h2 class="text-center mb-4">What Are Virtual Labs?</h2>
+        <h2 class="text-center mb-4">Current Competitions</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
+            <!-- RoboCup@Home -->
             <div class="col">
-                <div class="card text-center shadow-sm h-100">
+                <div class="card h-100 shadow-sm competition-card">
                     <div class="card-body">
-                        <h3 class="card-title">Digital Twins</h3>
-                        <p class="card-text">Explore realistic digital replicas of robots and environments.</p>
+                        <h5 class="card-title">RoboCup@Home</h5>
+                        <p class="card-text">The premier robotics competition focusing on real-world home environments. Test your robot's ability to assist in daily tasks.</p>
+                        <a href="https://www.robocupathome.org/" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
+            <!-- DARPA Robotics Challenge -->
             <div class="col">
-                <div class="card text-center shadow-sm h-100">
+                <div class="card h-100 shadow-sm competition-card">
                     <div class="card-body">
-                        <h3 class="card-title">Reproducibility</h3>
-                        <p class="card-text">Conduct experiments with reproducible outcomes.</p>
+                        <h5 class="card-title">DARPA Robotics Challenge</h5>
+                        <p class="card-text">A competition to develop robots capable of complex disaster-response tasks in human-engineered environments.</p>
+                        <a href="https://www.darpa.mil/program/darpa-robotics-challenge" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
+            <!-- Amazon Robotics Challenge -->
             <div class="col">
-                <div class="card text-center shadow-sm h-100">
+                <div class="card h-100 shadow-sm competition-card">
                     <div class="card-body">
-                        <h3 class="card-title">Collaboration</h3>
-                        <p class="card-text">Collaborate remotely with other researchers.</p>
+                        <h5 class="card-title">Amazon Robotics Challenge</h5>
+                        <p class="card-text">A platform to push the boundaries of robotic manipulation and warehouse automation.</p>
+                        <a href="https://aws.amazon.com/robomaker/" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="container my-5">
-        <h2 class="text-center mb-4">How Virtual Labs Work</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <!-- IEEE Robotics Competition -->
             <div class="col">
-                <div class="card text-center shadow-sm h-100">
+                <div class="card h-100 shadow-sm competition-card">
                     <div class="card-body">
-                        <h3 class="card-title">Step 1</h3>
-                        <p class="card-text">Choose a lab that matches your research goals.</p>
+                        <h5 class="card-title">IEEE Robotics Competition</h5>
+                        <p class="card-text">A student-oriented competition promoting innovation in autonomous robotics systems.</p>
+                        <a href="https://www.ieee.org/conferences/robotics.html" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
+            <!-- FIRA RoboWorld Cup -->
             <div class="col">
-                <div class="card text-center shadow-sm h-100">
+                <div class="card h-100 shadow-sm competition-card">
                     <div class="card-body">
-                        <h3 class="card-title">Step 2</h3>
-                        <p class="card-text">Configure experiments and input parameters.</p>
+                        <h5 class="card-title">FIRA RoboWorld Cup</h5>
+                        <p class="card-text">A global robotics competition emphasizing AI, robotics, and engineering innovation in various scenarios.</p>
+                        <a href="https://www.fira.net/" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
+            <!-- Eurobot -->
             <div class="col">
-                <div class="card text-center shadow-sm h-100">
+                <div class="card h-100 shadow-sm competition-card">
                     <div class="card-body">
-                        <h3 class="card-title">Step 3</h3>
-                        <p class="card-text">Run simulations and analyze results.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="container my-5">
-        <h2 class="text-center mb-4">Featured Labs</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card text-center shadow-sm h-100">
-                    <div class="card-body">
-                        <h3 class="card-title">Grasping and Manipulation Lab</h3>
-                        <p class="card-text">Experiment with robotic arms for object manipulation in diverse environments.</p>
-                        <a href="https://binder.intel4coro.de/v2/gh/LucaKro/pycram/88e8ccc3c29d25cfbf82d4e03d520ee1684ee64e?urlpath=lab%2Ftree%2Fdemos%2Fpycram_virtual_building_demos%2Ftransporting_actions%2Ftransport_demo_armar.ipynb" class="btn btn-primary" target="_blank">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-center shadow-sm h-100">
-                    <div class="card-body">
-                        <h3 class="card-title">Autonomous Navigation Lab</h3>
-                        <p class="card-text">Explore cutting-edge algorithms for navigation in dynamic spaces.</p>
-                        <a href="https://binder.intel4coro.de/v2/gh/LucaKro/pycram/88e8ccc3c29d25cfbf82d4e03d520ee1684ee64e?urlpath=lab%2Ftree%2Fdemos%2Fpycram_virtual_building_demos%2Ftransporting_actions%2Ftransport_demo_armar.ipynb" class="btn btn-primary" target="_blank">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-center shadow-sm h-100">
-                    <div class="card-body">
-                        <h3 class="card-title">Human-Robot Collaboration Lab</h3>
-                        <p class="card-text">Investigate collaborative tasks between humans and robots.</p>
-                        <a href="https://binder.intel4coro.de/v2/gh/LucaKro/pycram/88e8ccc3c29d25cfbf82d4e03d520ee1684ee64e?urlpath=lab%2Ftree%2Fdemos%2Fpycram_virtual_building_demos%2Ftransporting_actions%2Ftransport_demo_armar.ipynb" class="btn btn-primary" target="_blank">Learn More</a>
+                        <h5 class="card-title">Eurobot</h5>
+                        <p class="card-text">A friendly competition encouraging young engineers to design and build autonomous robots.</p>
+                        <a href="https://www.eurobot.org/" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
