relinked homepage virtual labs box

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <div class="row g-4">
             <!-- Virtual Labs Box -->
             <div class="col-md-4">
-                <a href="https://vib.ai.uni-bremen.de/page/labs/" target="_blank"
+                <!-- <a href="https://vib.ai.uni-bremen.de/page/labs/" target="_blank" -->
+                <a href="./templates/VirtualLab_directories.html" target="_blank"
                    class="card text-white text-center h-100 text-decoration-none" 
                    style="background: linear-gradient(135deg, #5A3F8A, #6F52A6); border-radius: 15px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <div class="card-body">
